add ScenicView
add ScenicView